<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="horizontal" android:baselineAligned="false"
    android:background="@drawable/ninepatchframe">
    <LinearLayout android:orientation="vertical" android:layout_height="match_parent"
        android:layout_width="0dip" android:layout_weight="0.75"
        android:layout_marginLeft="10dip" android:layout_marginTop="10dip" >
        <TextView android:text="@string/chap_one" android:textSize="13sp"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:text="@string/chap_two" android:textSize="13sp"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:text="@string/chap_three" android:textSize="13sp"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:text="@string/chap_four" android:textSize="13sp"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <ImageButton android:id="@+id/bookmarkImageButton" android:layout_marginTop="-35dp"
            android:scaleX="0.5" android:scaleY="0.5" android:layout_marginLeft="-35dip"
            android:src="@drawable/bookmark_states" android:background="#00000000"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:contentDescription="@string/bookmark_utility" />
        <ImageView android:src="@drawable/contents_shape" android:background="@drawable/trans_contents"
            android:id="@+id/porterDuffImageView" android:layout_margin="8dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:contentDescription="@string/bookmark_utility" />
   </LinearLayout>
   <LinearLayout android:orientation="vertical" android:layout_height="match_parent"
       android:layout_width="0dip" android:layout_weight="0.25"
       android:layout_marginTop="10dip" >
        <TextView android:text="@string/page_one" android:textSize="13sp"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:text="@string/page_two" android:textSize="13sp"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:text="@string/page_three" android:textSize="13sp"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:text="@string/page_four" android:textSize="13sp"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
</LinearLayout>